--- a/mathlete/AndroidManifest.xml
+++ b/mathlete/AndroidManifest.xml
@@ -15,7 +15,8 @@
         android:theme="@style/AppTheme" >
         <activity
             android:name="com.dylam.mathlete.MainActivity"
-            android:label="@string/app_name" >
+            android:label="@string/app_name" 
+            android:windowSoftInputMode="stateAlwaysVisible" >	
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
