--- a/mathlete/AndroidManifest.xml
+++ b/mathlete/AndroidManifest.xml
@@ -12,11 +12,13 @@
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/AppTheme"
+        android:windowSoftInputMode="stateAlwaysVisible|adjustResize" >
         <activity
             android:name="com.dylam.mathlete.MainActivity"
             android:label="@string/app_name" 
-            android:windowSoftInputMode="stateAlwaysVisible" >	
+		>
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
