--- a/mathlete/AndroidManifest.xml
+++ b/mathlete/AndroidManifest.xml
@@ -13,9 +13,9 @@
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme"
-        android:windowSoftInputMode="stateAlwaysVisible|adjustResize" >
+        		 >
         <activity
-            android:name="com.dylam.mathlete.MainActivity"
+            android:name="com.dylam.mathlete.Chapter1_TwoDigitAddition"
             android:label="@string/app_name" 
 		>
 
