--- a/mathlete/AndroidManifest.xml
+++ b/mathlete/AndroidManifest.xml
@@ -12,18 +12,19 @@
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme"
-        		 >
+        android:theme="@style/AppTheme" >
         <activity
-            android:name="com.dylam.mathlete.Chapter1_TwoDigitAddition"
-            android:label="@string/app_name" 
-		>
-
+            android:name="com.dylam.mathlete.MainActivity"
+            android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name="com.dylam.mathlete.Chapter1_TwoDigitAddition"
+            android:label="@string/app_name" >
         </activity>
     </application>
 
