--- a/mathlete/AndroidManifest.xml
+++ b/mathlete/AndroidManifest.xml
@@ -15,20 +15,20 @@
         android:theme="@style/AppTheme" >
         <activity
             android:name="com.dylam.mathlete.MainActivity"
-            android:label="@string/app_name" >
+            android:label="@string/app_name"
+            android:screenOrientation="portrait"
+            android:configChanges="orientation" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity
-            android:name="com.dylam.mathlete.Chapter1_TwoDigitAddition"
-            android:label="@string/app_name" >
-        </activity>
         <activity 
             android:name="com.dylam.mathlete.SettingsActivity"
             android:label="@string/app_name"
+            android:screenOrientation="portrait"
+            android:configChanges="orientation"
             android:parentActivityName="com.dylam.mathlete.MainActivity" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
