--- a/mathlete/AndroidManifest.xml
+++ b/mathlete/AndroidManifest.xml
@@ -20,11 +20,7 @@
             android:label="@string/app_name"
             android:screenOrientation="portrait"
             android:configChanges="orientation" >
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
         <activity 
             android:name="com.dylam.mathlete.SettingsActivity"
@@ -35,6 +31,16 @@
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.dylam.mathlete.MainActivity"/>
+        </activity>
+        <activity
+            android:name="com.dylam.mathlete.UserLogGraphActivity"
+            android:label="@string/app_name"
+            android:screenOrientation="portrait"
+            android:configChanges="orientation" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
         </activity>
     </application>
 
