--- a/mathlete/AndroidManifest.xml
+++ b/mathlete/AndroidManifest.xml
@@ -14,13 +14,17 @@
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/AppTheme" 
+        android:windowSoftInputMode="stateAlwaysVisible|adjustResize" >
         <activity
             android:name="com.dylam.mathlete.MainActivity"
             android:label="@string/app_name"
             android:screenOrientation="portrait"
             android:configChanges="orientation" >
-
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
         </activity>
         <activity 
             android:name="com.dylam.mathlete.SettingsActivity"
@@ -37,10 +41,6 @@
             android:label="@string/app_name"
             android:screenOrientation="portrait"
             android:configChanges="orientation" >
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
     </application>
 
