--- a/mathlete/AndroidManifest.xml
+++ b/mathlete/AndroidManifest.xml
@@ -37,6 +37,12 @@
                 android:value="com.dylam.mathlete.MainActivity"/>
         </activity>
         <activity
+            android:name="com.dylam.mathlete.UserLogActivity"
+            android:label="@string/app_name"
+            android:screenOrientation="portrait"
+            android:configChanges="orientation" >
+        </activity>
+        <activity
             android:name="com.dylam.mathlete.UserLogGraphActivity"
             android:label="@string/app_name"
             android:screenOrientation="portrait"
